Updated 12th October

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,12 +12,7 @@
 {{ end }}
 
 {{ define "main" }}
-{{- partial "sections/hero/index.html" . -}}
-{{- partial "sections/about.html" . -}}
 {{- partial "sections/wave.html" . -}}
-{{- partial "sections/experience.html" . -}}
-{{- partial "sections/education.html" . -}}
-{{- partial "sections/projects.html" . -}}
-{{- partial "sections/achievements.html" . -}}
-{{- partial "sections/contact.html" . -}}
+{{- partial "sections/hero/index.html" . -}}
+{{- partial "sections/wave.html" . -}}
 {{ end }}
