--- a/layouts/partials/sections/wave.html
+++ b/layouts/partials/sections/wave.html
@@ -2,8 +2,7 @@
 
 body{  padding:0; margin:0;}
 .dot{margin: 0 auto}
-.cont{text-align:center;position: fixed ; width: 100%;top:8%;}
-.conttwo{text-align:center;position: fixed ; width: 100%;top:85%;}
+.cont{text-align:center;}
 .wave {
   animation: moveTheWave 90000ms linear infinite;
   stroke-dasharray: 0 0 0 0;
@@ -38,32 +37,6 @@ body{  padding:0; margin:0;}
 </style>
 
 <div  class="cont" style=" ">
-		<div class="dot">
-						<svg width="100%" height="auto" viewBox="0 0 290 30">
-					    <path class="wave" fill="none" stroke="#5F8575" stroke-width="1" stroke-linecap="round" 
-					    d="
-                 M0.100 25
-                 
-	               c38
-                 0 45-20 75-20s50
-                 20 75 20
-                 c38
-                 0 45-5 75-20s50
-                 20 75 20
-                 c38 
-                 0 45-20 75-20s50
-                 20 75 20
-                 c38 
-                 0 45-20 75-20s50
-                 20 75 20
-
-					    " >
-					    </path>
-					  </svg>
-					</div>
-	</div>
-
-<div  class="conttwo" style=" ">
 		<div class="dot">
 						<svg width="100%" height="auto" viewBox="0 0 290 30">
 					    <path class="wave" fill="none" stroke="#5F8575" stroke-width="1" stroke-linecap="round" 
