--- a/layouts/index.html
+++ b/layouts/index.html
@@ -15,4 +15,8 @@
 {{- partial "sections/wave.html" . -}}
 {{- partial "sections/hero/index.html" . -}}
 {{- partial "sections/wave.html" . -}}
+
+<div style="height: 10cm;">
+</div>
+
 {{ end }}
